@@ -251,13 +251,13 @@ public class VCascadingMenu extends VObj implements ActionListener {
     protected final static String[] m_aStrShow = {"yes", "no"};
 
     private final static Object[][] attributes = {
-        {new Integer(LABEL),        "Label of item:"},
-        {new Integer(VARIABLE),     "Selection variables:"},
-        {new Integer(SETVAL),       "Value of item:"},
-        {new Integer(SHOW),         "Enable condition:"},
-        {new Integer(CMD),          "Vnmr command:"},
-        {new Integer(PANEL_FILE),   "Menu source:"},
-        {new Integer(STATSHOW),     "Show Dot Files:", "radio", m_aStrShow},
+        {Integer.valueOf(LABEL),        "Label of item:"},
+        {Integer.valueOf(VARIABLE),     "Selection variables:"},
+        {Integer.valueOf(SETVAL),       "Value of item:"},
+        {Integer.valueOf(SHOW),         "Enable condition:"},
+        {Integer.valueOf(CMD),          "Vnmr command:"},
+        {Integer.valueOf(PANEL_FILE),   "Menu source:"},
+        {Integer.valueOf(STATSHOW),     "Show Dot Files:", "radio", m_aStrShow},
     };
 
     public Object[][] getAttributes()  { return attributes; }
