@@ -83,13 +83,13 @@ public class VColorChooser extends JPanel
     protected JLabel tbox=null;
     
     private  Object[][] attributes = {
-    {new Integer(LABEL),  Util.getLabel(LABEL)},
-    {new Integer(VARIABLE), Util.getLabel(VARIABLE) },
-    {new Integer(SETVAL), Util.getLabel("LABELVALUE","Value of item")},
-    {new Integer(KEYVAL), Util.getLabel("ccKEYVAL","Color value")},
-    {new Integer(KEYSTR), Util.getLabel("ccKEYSTR","Display Variable")},
-    {new Integer(CMD),	  Util.getLabel(CMD)},
-    {new Integer(DISPLAY),Util.getLabel("ccDISPLAY","Color Names"),"menu",
+    {Integer.valueOf(LABEL),  Util.getLabel(LABEL)},
+    {Integer.valueOf(VARIABLE), Util.getLabel(VARIABLE) },
+    {Integer.valueOf(SETVAL), Util.getLabel("LABELVALUE","Value of item")},
+    {Integer.valueOf(KEYVAL), Util.getLabel("ccKEYVAL","Color value")},
+    {Integer.valueOf(KEYSTR), Util.getLabel("ccKEYSTR","Display Variable")},
+    {Integer.valueOf(CMD),	  Util.getLabel(CMD)},
+    {Integer.valueOf(DISPLAY),Util.getLabel("ccDISPLAY","Color Names"),"menu",
                             (types=(Util.getAppIF() instanceof VAdminIF) ?
                                 WFontColors.getShowTypes() : DisplayOptions.getShowTypes())},
     };
