@@ -455,15 +455,15 @@ public class VThermometer extends JProgressBar
     private final static String[] orient_str = {"Vertical", "Horizontal"};
     private final static String[] true_false = {"True", "False"};
     private final static Object[][] attributes = {
-	{new Integer(STATPAR), "Status parameter:"},
-	{new Integer(VARIABLE), "Vnmr variables:"},
-	{new Integer(SETVAL), "Vnmr value expression:"},
-	{new Integer(MIN), "Min displayed value:"},
-	{new Integer(MAX), "Max displayed value:"},
-	{new Integer(ORIENTATION), "Orientation:", "menu", orient_str},
-	{new Integer(DIGITAL), "Show digital readout:", "menu", true_false},
-	{new Integer(BGCOLOR), "Background color:", "color"},
-	//{new Integer(SHOWMAX), "Show max value marker:", "menu", true_false},
+	{Integer.valueOf(STATPAR), "Status parameter:"},
+	{Integer.valueOf(VARIABLE), "Vnmr variables:"},
+	{Integer.valueOf(SETVAL), "Vnmr value expression:"},
+	{Integer.valueOf(MIN), "Min displayed value:"},
+	{Integer.valueOf(MAX), "Max displayed value:"},
+	{Integer.valueOf(ORIENTATION), "Orientation:", "menu", orient_str},
+	{Integer.valueOf(DIGITAL), "Show digital readout:", "menu", true_false},
+	{Integer.valueOf(BGCOLOR), "Background color:", "color"},
+	//{Integer.valueOf(SHOWMAX), "Show max value marker:", "menu", true_false},
     };
 
     public void setModalMode(boolean s) {}
