@@ -59,10 +59,10 @@ public class VTrayColor extends JComponent implements VObjIF, VObjDef,
     private Point tmpLoc = new Point(0, 0);
 
     private final static Object[][] m_attributes = {
-        {new Integer(PANEL_NAME), Util.getLabel("Name of item:") },
-        {new Integer(SHOW),     Util.getLabel(SHOW) },
-        {new Integer(SETVAL), Util.getLabel("Color:") },
-        {new Integer(TOOLTIP), Util.getLabel(TOOLTIP) }
+        {Integer.valueOf(PANEL_NAME), Util.getLabel("Name of item:") },
+        {Integer.valueOf(SHOW),     Util.getLabel(SHOW) },
+        {Integer.valueOf(SETVAL), Util.getLabel("Color:") },
+        {Integer.valueOf(TOOLTIP), Util.getLabel(TOOLTIP) }
     };
 
 
